initial background for all modals.

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -8,6 +8,31 @@
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
+  justify-content: center;
+  align-items: center;
   align-items: flex-start;
-  opacity: 0.8;
+  .about-text-cont { 
+    color: $light-color;
+    width: 70vw;
+    height: 60vh;
+    background: $background-dark;
+    opacity: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 1.5rem;
+    line-height: 2rem;
+    span {
+      margin: 1rem auto;
+      font-size: 3.5rem;
+      font-weight: 600;
+      margin-bottom: 1rem;
+    }
+    p {
+      font-size: 1.4rem;
+      z-index: 2;
+      margin-bottom: 1.5rem;
+    }
+  }
 }
+
