--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -12,7 +12,7 @@
     width: 50%;
     height: 80%;
     text-align: center;
-    padding-top: 10%;
+    padding-top: 5rem;;
     p {
       animation: showup 5s;
       // animation-delay: 0.5s;
