--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -42,17 +42,6 @@
   }
 }
 
-// @keyframes showup {
-//   // from {
-//   //   display: none;
-//   //   opacity: 0;
-//   //   color: white;
-//   // }
-
-//   // to {
-//   //   display: initial;
-//   //   opacity: 1;
-//   // }
-//   0% {opacity:0;}
-//   100% {opacity:1;}
-// }
+@media (max-width: 1120px) {
+  
+}
