--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -7,13 +7,14 @@
   height: calc(100vh - 5rem);
   background: linear-gradient(0.25turn, #f69d3c, #ebf8e1, #3f87a6);
   display: flex;
+  justify-content: center;
   align-items: flex-start;
 
   .heading {
-    width: 50%;
+    width: 55%;
     height: 80%;
     text-align: center;
-    padding-top: 5rem;;
+    padding-top: 5rem;
     p {
       animation: showup 3.5s;
       // animation-delay: 0.5s;
@@ -32,7 +33,7 @@
     }
   }
   img {
-    height: 60%;
+    height: 365px;
     opacity: 0.9;
     border-radius: 50%;
     transition: 0.4s;
@@ -43,5 +44,92 @@
 }
 
 @media (max-width: 1120px) {
-  
+  .home {
+    .heading p {
+      font-size: 1.75rem;
+    }
+    img {
+      height: 310px;
+    }
+  }  
+}
+
+@media (max-width: 1000px) {
+  .home {
+    padding-top: 6rem;
+    .heading p {
+      font-size: 1.5rem;
+    }
+    img {
+      height: 300px;
+    }
+  }  
+}
+
+@media (max-width: 895px) {
+  .home {
+    .heading p {
+      font-size: 1.2rem;
+      letter-spacing: 0.27rem;
+    }
+    img {
+      height: 250px;
+    }
+  }  
+}
+
+@media (max-width: 652px) {
+  .home {
+    .heading p {
+      font-size: 1.1rem;
+    }
+    img {
+      height: 230px;
+    }
+  }  
+}
+
+@media (max-width: 555px) {
+  .home {
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    padding-top: 1.5rem;
+    .heading {
+      height: 150px;
+      padding: 0;
+      width: 95vw;
+    }
+    img {
+      height: 210px;
+    }
+  }  
+}
+
+@media (max-width: 400px) {
+  .home {
+    .heading {
+      height: 130px;
+      p {
+        font-size: 1rem;
+      }
+    }
+    img {
+      height: 190px;
+    }
+  } 
+}
+
+@media (max-width: 350px) {
+  .home {
+    .heading {
+      p {
+        font-size: 0.9rem;
+        letter-spacing: 0.26rem;
+      }
+    }
+    img {
+      height: 180px;
+    }
+  } 
 }
