--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -8,6 +8,7 @@
   justify-content: flex-end;
   align-items: center;
   background: $background-dark;
+  background-attachment: fixed; 
   color: rgb(252, 252, 252);
   > div {
     margin-right: 2rem;
@@ -40,7 +41,7 @@
   .nav > div {
     margin-right: 0.5rem;
     width: 4rem;
-    font-size: 0.6rem;
+    font-size: 0.75rem;
   }
 }
 
