--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -24,6 +24,7 @@
     justify-content: space-around;
     flex-wrap: wrap;
     align-items: center;
+    margin-bottom: 4rem;
     > div {
       display: flex;
       flex-direction: column;
@@ -42,5 +43,34 @@
       }
     }
   }
+}
+
+@media (max-width: 900px) {
+  .skills .content-container > div {
+    margin: 1.5rem 4rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .skills .content-container > div {
+    margin: 1.5rem 3rem;
+    img {
+      height: 90px;
+    }
+  }
+}
+
+@media (max-width: 575px) {
+  .skills {
+    h2 {
+      font-size: 2.75rem;
+    }
+    .content-container > div {
+      margin: 1.2rem 2rem;
+      img {
+        height: 80px;
+      }
+    }
+  } 
 }
 
