changed skills, added JavaScript

--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -55,7 +55,10 @@
   .skills .content-container > div {
     margin: 1.5rem 3rem;
     img {
-      height: 90px;
+      height: 85px;
+    }
+    span {
+      font-size: 0.9rem;
     }
   }
 }
