--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -29,6 +29,7 @@
       display: flex;
       justify-content: space-around;
       align-items: center;
+      margin-bottom: 1rem;
       .destination-buttons {
         height: 3rem;
         width: 3rem;
