--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -7,6 +7,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   overflow: auto;
+  color: rgb(252, 252, 252);
   h2  {
     font-size: 3.5rem;
     font-weight: 900;
